<resources>
    <string name="app_name">Painter</string>
    <string name="action_settings">Settings</string>
    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="line_imageview_descriprion">This displays the line thickness</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Erase Drawing</string>
    <string name="menuitem_line_width">Line Width</string>
    <string name="menuitem_save">Save</string>
    <string name="menuitem_print">Print</string>
    <string name="message_erase">Erase the drawing?</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_saved">Your saved painting can be viewed in the Photos app by selecting Device Folders from that app\'s menu</string>
    <string name="message_error_printing">Your device does not support printing</string>
    <string name="permission_explanation">To save an image, the app requires permission to write to external storage</string>
    <string name="title_color_dialog">Choose Color</string>
    <string name="title_line_width_dialog">Choose Line Width</string>
    <string name="menuitem_circle">Draw circle</string>
    <string name="menuitem_rectangle">Draw rectangle</string>
    <string name="circleMessage">Set coordinates and size</string>
    <string name="circleX">X:</string>
    <string name="circleY">Y:</string>
    <string name="circleRadius">Radius:</string>
    <string name="title_draw_circle_dialog">Coordinates and size of the circle</string>
    <string name="button_set_coordinates">Set coordinates</string>
    <string name="message_draw_rect">Enter the coordinates of the rectangle</string>
    <string name="RightRect">Right:</string>
    <string name="leftRect">Left:</string>
    <string name="topRect">Top:</string>
    <string name="bottomRect">Bottom:</string>
    <string name="title_draw_rect">Rectangle сoordinates</string>
</resources>
