<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".DrawRectFragment">
    <TextView
        android:id="@+id/messageRectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="right|center_vertical"
        android:text="@string/message_draw_rect" />

    <TextView
        android:id="@+id/setRectRightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/RightRect" />

    <EditText
        android:id="@+id/setRectRightEditText"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

    <TextView
        android:id="@+id/setRectLeftTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/leftRect" />

    <EditText
        android:id="@+id/setRectLeftEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

    <TextView
        android:id="@+id/setRectTopTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/topRect" />

    <EditText
        android:id="@+id/setRectTopEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />
    <TextView
        android:id="@+id/setRectBottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/bottomRect" />

    <EditText
        android:id="@+id/setRectRBottomsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

</GridLayout>