<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawCircleGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".DrawCircleFragment">

    <TextView
        android:id="@+id/messageCircleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/circleMessage" />

    <TextView
        android:id="@+id/setCircleXTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/circleX" />

    <EditText
        android:id="@+id/setCircleXEditText"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

    <TextView
        android:id="@+id/setCircleYTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/circleY" />

    <EditText
        android:id="@+id/setCircleYEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

    <TextView
        android:id="@+id/setCircleRadiusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="right|center_vertical"
        android:text="@string/circleRadius" />

    <EditText
        android:id="@+id/setCircleRadiusEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="number" />

</GridLayout>